tests/expected_output/clang-6.0-x86_64-pc-linux-gnu/mod_zero-fsanitize=valgrind.txt
tests/run_time_errors/mod_zero.c:7:20: runtime error: division by zero

